08 Nov 2006 Fix Diag 204 RMF structure size - Ivan Warren
            Detected by "aleeuw2000"
06 Nov 2006 Update to instfetch processing - Greg Smith
06 Nov 2006 Fix ECPS:VM VTIMER processing - Ivan Warren
05 Nov 2006 OBTAIN_MAINLOCKx macros - Greg Smith
05 Nov 2006 Simplify PER processing - Greg Smith
04 Nov 2006 Added CGER, CGDR, CGXR - Bernard van der Helm
31 Oct 2006 Use accelerated byte swaps for x86_64 - Ivan Warren
30 Oct 2006 Reinstate dasdconv stdin option - Roger Bowler
27 Oct 2006 Reformatted dyncrypt.c, no functional change - Bernard
26 Oct 2006 make KM/KMC/KMAC/KIMD/KLMD compliant regarding stringent
            register checkings as per POP - Ivan Warren
25 Oct 2006 Performance enhancements suggested by Kees, part 1
            distinguish between strict/non-strict load/store - Greg Smith
19 Oct 2006 Fix TUNSETIFF problem on linux 2.6.18 - Greg Smith
12 Oct 2006 Fix 370 and 390 only modes - Greg Smith
09 Oct 2006 Fix some compiler warnings - Ivan Warren
02 Oct 2006 Fix some interval timer processing issues - Ivan Warren
01 Oct 2006 minor(?) accuracy/efficiency tweaks to Win32 'gettimeofday' - Fish
30 Sep 2006 timer interval config stmt & panel cmd - Enrico Sorichetti by Fish
30 Sep 2006 Use nanosleep in timer_update_thread if available - Fish
28 Sep 2006 RSS instruction format and ECTG instruction - Jan Jaeger
26 Sep 2006 PR# misc/99: Config file "include <filename>" with "Enhanced"
            symbol substitution - Hackules by Enrico Sorichetti by Fish
26 Sep 2006 Fix ieee bfp to integer conversions - Jimmy by Greg Smith
23 Sep 2006 RO/RW/RING/NORING tape config options (replaces previous
            RO/NORING) - Kevin Leonard by Jay Maynard
22 Sep 2006 Fix possible loop in SERVC WRITE_EVENT_DATA - Jan Jaeger
22 Sep 2006 PR# misc/30: HAO (Hercules Automatic Operator) - Bernard
            van der Helm by Fish
21 Sep 2006 PR# misc/79: single device devlist & defsym command - Fish
20 Sep 2006 PR# misc/98: "Additive" OSTAILOR - Fish