@@ -17,6 +17,8 @@
 
 #include "inline.h"
 
+#include "sr.h"
+
 #if !defined(_CLOCK_C_)
 #define _CLOCK_C_
 
@@ -384,6 +386,118 @@ U64 new_clock;
     update_cpu_timer();
 
     return new_clock;
+}
+
+#define SR_SYS_CLOCK_CURRENT_CSR          ( SR_SYS_CLOCK | 0x001 )
+#define SR_SYS_CLOCK_UNIVERSAL_TOD        ( SR_SYS_CLOCK | 0x002 )
+#define SR_SYS_CLOCK_HW_STEERING          ( SR_SYS_CLOCK | 0x004 )
+#define SR_SYS_CLOCK_HW_EPISODE           ( SR_SYS_CLOCK | 0x005 )
+#define SR_SYS_CLOCK_HW_OFFSET            ( SR_SYS_CLOCK | 0x006 )
+
+#define SR_SYS_CLOCK_OLD_CSR              ( SR_SYS_CLOCK | 0x100 )
+#define SR_SYS_CLOCK_OLD_CSR_START_TIME   ( SR_SYS_CLOCK | 0x101 )
+#define SR_SYS_CLOCK_OLD_CSR_BASE_OFFSET  ( SR_SYS_CLOCK | 0x102 )
+#define SR_SYS_CLOCK_OLD_CSR_FINE_S_RATE  ( SR_SYS_CLOCK | 0x103 )
+#define SR_SYS_CLOCK_OLD_CSR_GROSS_S_RATE ( SR_SYS_CLOCK | 0x104 )
+
+#define SR_SYS_CLOCK_NEW_CSR              ( SR_SYS_CLOCK | 0x200 )
+#define SR_SYS_CLOCK_NEW_CSR_START_TIME   ( SR_SYS_CLOCK | 0x201 )
+#define SR_SYS_CLOCK_NEW_CSR_BASE_OFFSET  ( SR_SYS_CLOCK | 0x202 )
+#define SR_SYS_CLOCK_NEW_CSR_FINE_S_RATE  ( SR_SYS_CLOCK | 0x203 )
+#define SR_SYS_CLOCK_NEW_CSR_GROSS_S_RATE ( SR_SYS_CLOCK | 0x204 )
+
+int clock_hsuspend(void *file)
+{
+    int i;
+    char buf[SR_MAX_STRING_LENGTH];
+
+    i = (current == &new);
+    SR_WRITE_VALUE(file, SR_SYS_CLOCK_CURRENT_CSR, i, sizeof(i));
+    SR_WRITE_VALUE(file, SR_SYS_CLOCK_UNIVERSAL_TOD, universal_tod, sizeof(universal_tod));
+    snprintf(buf, sizeof(buf), "%f", hw_steering);
+    SR_WRITE_STRING(file, SR_SYS_CLOCK_HW_STEERING, buf);
+    SR_WRITE_VALUE(file, SR_SYS_CLOCK_HW_EPISODE, hw_episode, sizeof(hw_episode));
+    SR_WRITE_VALUE(file, SR_SYS_CLOCK_HW_OFFSET, hw_offset, sizeof(hw_offset));
+
+    SR_WRITE_VALUE(file, SR_SYS_CLOCK_OLD_CSR_START_TIME,   old.start_time,   sizeof(old.start_time));
+    SR_WRITE_VALUE(file, SR_SYS_CLOCK_OLD_CSR_BASE_OFFSET,  old.base_offset,  sizeof(old.base_offset));
+    SR_WRITE_VALUE(file, SR_SYS_CLOCK_OLD_CSR_FINE_S_RATE,  old.fine_s_rate,  sizeof(old.fine_s_rate));
+    SR_WRITE_VALUE(file, SR_SYS_CLOCK_OLD_CSR_GROSS_S_RATE, old.gross_s_rate, sizeof(old.gross_s_rate));
+
+    SR_WRITE_VALUE(file, SR_SYS_CLOCK_NEW_CSR_START_TIME,   new.start_time,   sizeof(new.start_time));
+    SR_WRITE_VALUE(file, SR_SYS_CLOCK_NEW_CSR_BASE_OFFSET,  new.base_offset,  sizeof(new.base_offset));
+    SR_WRITE_VALUE(file, SR_SYS_CLOCK_NEW_CSR_FINE_S_RATE,  new.fine_s_rate,  sizeof(new.fine_s_rate));
+    SR_WRITE_VALUE(file, SR_SYS_CLOCK_NEW_CSR_GROSS_S_RATE, new.gross_s_rate, sizeof(new.gross_s_rate));
+
+    return 0;
+}
+
+int clock_hresume(void *file)
+{
+    size_t key, len;
+    int i;
+    float f;
+    char buf[SR_MAX_STRING_LENGTH];
+
+    memset(&old, 0, sizeof(CSR));
+    memset(&new, 0, sizeof(CSR));
+    current = &new;
+    universal_tod = 0;
+    hw_steering = 0.0;
+    hw_episode = 0;
+    hw_offset = 0;
+
+    do {
+        SR_READ_HDR(file, key, len);
+        switch (key) {
+        case SR_SYS_CLOCK_CURRENT_CSR:
+            SR_READ_VALUE(file, len, &i, sizeof(i));
+            current = i ? &new : &old;
+            break;
+        case SR_SYS_CLOCK_UNIVERSAL_TOD:
+            SR_READ_VALUE(file, len, &universal_tod, sizeof(universal_tod));
+            break;
+        case SR_SYS_CLOCK_HW_STEERING:
+            SR_READ_STRING(file, buf, len);
+            sscanf(buf, "%f",&f);
+            hw_steering = f;
+            break;
+        case SR_SYS_CLOCK_HW_EPISODE:
+            SR_READ_VALUE(file, len, &hw_episode, sizeof(hw_episode));
+            break;
+        case SR_SYS_CLOCK_HW_OFFSET:
+            SR_READ_VALUE(file, len, &hw_offset, sizeof(hw_offset));
+            break;
+        case SR_SYS_CLOCK_OLD_CSR_START_TIME:
+            SR_READ_VALUE(file, len, &old.start_time, sizeof(old.start_time));
+            break;
+        case SR_SYS_CLOCK_OLD_CSR_BASE_OFFSET:
+            SR_READ_VALUE(file, len, &old.base_offset, sizeof(old.base_offset));
+            break;
+        case SR_SYS_CLOCK_OLD_CSR_FINE_S_RATE:
+            SR_READ_VALUE(file, len, &old.fine_s_rate, sizeof(old.fine_s_rate));
+            break;
+        case SR_SYS_CLOCK_OLD_CSR_GROSS_S_RATE:
+            SR_READ_VALUE(file, len, &old.gross_s_rate, sizeof(old.gross_s_rate));
+            break;
+        case SR_SYS_CLOCK_NEW_CSR_START_TIME:
+            SR_READ_VALUE(file, len, &new.start_time, sizeof(new.start_time));
+            break;
+        case SR_SYS_CLOCK_NEW_CSR_BASE_OFFSET:
+            SR_READ_VALUE(file, len, &new.base_offset, sizeof(new.base_offset));
+            break;
+        case SR_SYS_CLOCK_NEW_CSR_FINE_S_RATE:
+            SR_READ_VALUE(file, len, &new.fine_s_rate, sizeof(new.fine_s_rate));
+            break;
+        case SR_SYS_CLOCK_NEW_CSR_GROSS_S_RATE:
+            SR_READ_VALUE(file, len, &new.gross_s_rate, sizeof(new.gross_s_rate));
+            break;
+        default:
+            SR_READ_SKIP(file, len);
+            break;
+        }
+    } while ((key & SR_SYS_MASK) == SR_SYS_CLOCK);
+    return 0;
 }
 
 
